2013-02-04  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/56008
	* gfortran.dg/realloc_on _assign_16.f90 : New test.

	PR fortran/47517
	* gfortran.dg/realloc_on _assign_17.f90 : New test.

2013-02-04  Alexander Potapenko <glider@google.com>
            Jack Howarth  <howarth@bromo.med.uc.edu>
	    Jakub Jelinek  <jakub@redhat.com>

	PR sanitizer/55617
	* g++.dg/asan/pr55617.C: New test.

2013-02-04  Mikael Morin  <mikael@gcc.gnu.org>

	PR fortran/54195
	* gfortran.dg/typebound_operator_19.f90: New test.
	* gfortran.dg/typebound_assignment_4.f90: New test.

2013-02-04  Mikael Morin  <mikael@gcc.gnu.org>

	PR fortran/54107
	* gfortran.dg/recursive_interface_1.f90: New test.

2013-02-04  Richard Guenther  <rguenther@suse.de>

	PR lto/56168
	* gcc.dg/lto/pr56168_0.c: New testcase.
	* gcc.dg/lto/pr56168_1.c: Likewise.

2013-02-02  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/50627
	PR fortran/56054
	* gfortran.dg/block_12.f90:  New test.
	* gfortran.dg/module_error_1.f90:  New test.

2013-02-02  Richard Sandiford  <rdsandiford@googlemail.com>

	* lib/target-supports.exp (check_effective_target_vect_float)
	(check_effective_target_vect_no_align): Add mips-sde-elf.

2013-02-01  Jakub Jelinek  <jakub@redhat.com>

	* lib/gcc-dg.exp (restore-target-env-var): Avoid using lreverse.

2013-02-01  David Edelsohn  <dje.gcc@gmail.com>

	* gcc.dg/pr56023.c: XFAIL on AIX.
	* gcc.dg/vect/pr49352.c: Same.

2013-02-01  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/opt26.adb: New test.

2013-01-31  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>

	Revert.
	2013-01-27  Amol Pise  <amolpise15@gmail.com>

	* gcc.target/arm/neon-vfnms-1.c: New test.
	* gcc.target/arm/neon-vfnma-1.c: New test.

2013-01-31  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/56157
	* gcc.dg/torture/pr56157.c: New testcase.

2013-01-30  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/56150
	* gcc.dg/torture/pr56150.c: New testcase.

2013-01-30  Jakub Jelinek  <jakub@redhat.com>