@@ -1,3 +1,8 @@
+2012-02-04  Oleg Endo  <olegendo@gcc.gnu.org>
+
+	PR tree-optimization/54386
+	* gcc.target/sh/pr54386.c: New.
+
 2013-02-04  Paul Thomas  <pault@gcc.gnu.org>
 
 	PR fortran/56008
